<resources>
    <string name="app_name">Duality Launcher</string>
    <string name="action_settings">Settings</string>
    <string name="action_add_widget">Add Widget</string>
    <string name="action_wallpaper">Wallpaper</string>
    <string name="action_wideshot">Wide Screenshot</string>
    <string name="action_uninstall">Uninstall</string>
    <string name="action_appinfo">App Info</string>
    <string name="pref_app_drawer">App Drawer</string>
    <string name="pref_app_drawer_background">Background color</string>
    <string name="pref_app_drawer_text">Text color</string>
    <string name="pref_app_drawer_text_shadow">Text shadow color</string>
    <string name="pref_dock">Dock</string>
    <string name="pref_dock_background">Show background</string>
    <string name="pref_dock_background_color">Background color</string>
    <string name="title_activity_settings">Duality Settings</string>
    <string name="title_activity_wallpaper">Wallpaper</string>
    <string name="button_personal">Personal</string>
    <string name="button_work">Work</string>
    <string name="new_folder">New Folder</string>
    <string name="developer_warning">PLEASE NOTE: The tools in this menu vary from informational to destructive! Tools with an \'eye\' icon will simply show information, however, other tools change and / or destroy data and may result in loss of information or other undesired results such as crashes and unexpected behavior. Proceed at your own risk!</string>
    <string name="acra_dialog_text">Duality Launcher has crashed, please help the developer by following the prompts to send the crash report via email.  Please add any extra info, such as what you were doing when the crash occurred, to the email body.  Thanks for helping to make Duality Launcher better!</string>
    <string name="red">Red</string>
    <string name="green">Green</string>
    <string name="blue">Blue</string>
    <string name="alpha">Alpha</string>
    <string name="color_chooser">Preset:</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="custom">Custom:</string>
    <string name="color_chooser_title">Choose a color</string>
    <string name="dock_search">Show a search widget in the dock</string>
    <string name="dock_search_color">Background color</string>
    <string name="dock_search_color_foreground">Foreground color</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>