<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <us.graymatterapps.dualitylauncher.ColorPreference
        android:defaultValue="-16777216"
        android:key="app_drawer_background"
        android:title="@string/pref_app_drawer_background" />
    <us.graymatterapps.dualitylauncher.ColorPreference
        android:defaultValue="-1"
        android:key="app_drawer_text"
        android:title="@string/pref_app_drawer_text" />
    <us.graymatterapps.dualitylauncher.ColorPreference
        android:defaultValue="-16777216"
        android:key="app_drawer_text_shadow"
        android:title="@string/pref_app_drawer_text_shadow" />
    <CheckBoxPreference
        android:defaultValue="true"
        android:key="app_drawer_nav_status_sync"
        android:summary="Synchronize navigation and status bar backgrounds with the app drawer background when open."
        android:title="Sync bars with drawer when open" />
</PreferenceScreen>