<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/colorPickerLayout"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:padding="20dp">

    <TextView
        android:id="@+id/colorPickerTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:text="@string/color_chooser"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Spinner
        android:id="@+id/spinnerPreset"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:entries="@array/android_colors"
        android:padding="5dp"
        android:spinnerMode="dropdown"
        app:layout_constraintBottom_toBottomOf="@+id/colorPickerTitle"
        app:layout_constraintStart_toEndOf="@+id/colorPickerTitle"
        app:layout_constraintTop_toTopOf="@+id/colorPickerTitle" />

    <TextView
        android:id="@+id/fineTune"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:text="@string/custom"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/colorPreview" />

    <ImageView
        android:id="@+id/colorPreview"
        android:layout_width="50dp"
        android:layout_height="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/spinnerPreset"
        app:layout_constraintTop_toTopOf="@+id/spinnerPreset"
        tools:srcCompat="@android:color/black" />

    <TextView
        android:id="@+id/seekTextRed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:text="@string/red"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fineTune" />

    <SeekBar
        android:id="@+id/seekBarRed"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:max="255"
        app:layout_constraintBottom_toBottomOf="@+id/seekTextRed"
        app:layout_constraintStart_toEndOf="@+id/seekTextGreen"
        app:layout_constraintTop_toBottomOf="@+id/fineTune" />

    <TextView
        android:id="@+id/valueRed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="0"
        app:layout_constraintBottom_toBottomOf="@+id/seekTextRed"
        app:layout_constraintStart_toEndOf="@+id/seekBarRed"
        app:layout_constraintTop_toTopOf="@+id/seekTextRed" />

    <ImageView
        android:id="@+id/redLeft"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        app:layout_constraintBottom_toBottomOf="@+id/seekBarRed"
        app:layout_constraintStart_toStartOf="@+id/valueRed"
        app:layout_constraintTop_toTopOf="@+id/seekBarRed"
        app:srcCompat="@drawable/ic_arrow_left" />

    <ImageView
        android:id="@+id/redRight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/redLeft"
        app:layout_constraintStart_toEndOf="@+id/redLeft"
        app:layout_constraintTop_toTopOf="@+id/redLeft"
        app:srcCompat="@drawable/ic_arrow_right" />

    <TextView
        android:id="@+id/seekTextGreen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:text="@string/green"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/seekTextRed" />

    <SeekBar
        android:id="@+id/seekBarGreen"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:max="255"
        app:layout_constraintBottom_toBottomOf="@+id/seekTextGreen"
        app:layout_constraintStart_toEndOf="@+id/seekTextGreen"
        app:layout_constraintTop_toTopOf="@+id/seekTextGreen" />

    <TextView
        android:id="@+id/valueGreen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="0"
        app:layout_constraintBottom_toBottomOf="@+id/seekTextGreen"
        app:layout_constraintStart_toEndOf="@+id/seekBarGreen"
        app:layout_constraintTop_toTopOf="@+id/seekTextGreen" />

    <ImageView
        android:id="@+id/greenLeft"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        app:layout_constraintBottom_toBottomOf="@+id/seekBarGreen"
        app:layout_constraintStart_toStartOf="@+id/valueRed"
        app:layout_constraintTop_toTopOf="@+id/seekBarGreen"
        app:srcCompat="@drawable/ic_arrow_left" />

    <ImageView
        android:id="@+id/greenRight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/greenLeft"
        app:layout_constraintStart_toEndOf="@+id/redLeft"
        app:layout_constraintTop_toTopOf="@+id/greenLeft"
        app:srcCompat="@drawable/ic_arrow_right" />

    <TextView
        android:id="@+id/seekTextBlue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:text="@string/blue"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/seekTextGreen" />

    <SeekBar
        android:id="@+id/seekBarBlue"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:max="255"
        app:layout_constraintBottom_toBottomOf="@+id/seekTextBlue"
        app:layout_constraintStart_toEndOf="@+id/seekTextGreen"
        app:layout_constraintTop_toTopOf="@+id/seekTextBlue" />

    <TextView
        android:id="@+id/valueBlue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="0"
        app:layout_constraintBottom_toBottomOf="@+id/seekTextBlue"
        app:layout_constraintStart_toEndOf="@+id/seekBarBlue"
        app:layout_constraintTop_toTopOf="@+id/seekTextBlue" />

    <ImageView
        android:id="@+id/blueLeft"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        app:layout_constraintBottom_toBottomOf="@+id/seekBarBlue"
        app:layout_constraintStart_toStartOf="@+id/valueRed"
        app:layout_constraintTop_toTopOf="@+id/seekBarBlue"
        app:srcCompat="@drawable/ic_arrow_left" />

    <ImageView
        android:id="@+id/blueRight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/blueLeft"
        app:layout_constraintStart_toEndOf="@+id/redLeft"
        app:layout_constraintTop_toTopOf="@+id/blueLeft"
        app:srcCompat="@drawable/ic_arrow_right" />

    <TextView
        android:id="@+id/seekTextAlpha"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:text="@string/alpha"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/seekTextBlue" />

    <SeekBar
        android:id="@+id/seekBarAlpha"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:max="255"
        app:layout_constraintBottom_toBottomOf="@+id/seekTextAlpha"
        app:layout_constraintStart_toEndOf="@+id/seekTextGreen"
        app:layout_constraintTop_toTopOf="@+id/seekTextAlpha" />

    <TextView
        android:id="@+id/valueAlpha"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="0"
        app:layout_constraintBottom_toBottomOf="@+id/seekTextAlpha"
        app:layout_constraintStart_toEndOf="@+id/seekBarAlpha"
        app:layout_constraintTop_toTopOf="@+id/seekTextAlpha" />

    <ImageView
        android:id="@+id/alphaLeft"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        app:layout_constraintBottom_toBottomOf="@+id/seekBarAlpha"
        app:layout_constraintStart_toStartOf="@+id/valueRed"
        app:layout_constraintTop_toTopOf="@+id/seekBarAlpha"
        app:srcCompat="@drawable/ic_arrow_left" />

    <ImageView
        android:id="@+id/alphaRight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/alphaLeft"
        app:layout_constraintStart_toEndOf="@+id/redLeft"
        app:layout_constraintTop_toTopOf="@+id/alphaLeft"
        app:srcCompat="@drawable/ic_arrow_right" />

</androidx.constraintlayout.widget.ConstraintLayout>